--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<p>Browser game Froger - Remake</p>
+	
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+    <script type="text/javascript">
+    	
+    </script>
 </body>
 </html>
